syntax = "proto3";

option csharp_namespace = "UserService";

service GrpcKiteschool {
    rpc GetAllKiteschools (GetAllRequest) returns (KiteschoolResponse);
}

message GetAllRequest {}

message GrpcKiteschoolModel {
    int32 kiteschoolId = 1;
    string name = 2;
    string email = 3;
    string location = 4;
}

message KiteschoolResponse {
    repeated GrpcKiteschoolModel kiteschool = 1;
}